Fix - adds overflow-x: hidden on html to fix mystery scroll/margin on chrome mobile browser

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3276,6 +3276,9 @@ body,
 #root {
   height: 100%; }
 
+html {
+  overflow-x: hidden; }
+
 body {
   padding: 0;
   margin: 0;
