--- a/client/src/styles/_main.scss
+++ b/client/src/styles/_main.scss
@@ -12,9 +12,9 @@ body,
   height: 100%;
 }
 
-//html {
-//  overflow-y: scroll;
-//}
+html {
+  overflow-x: hidden;
+}
 
 body {
   padding: 0;
